# pxn-v10-fix

./: .gitignore  CMakeLists.txt  README.md  ffb_reader.cpp  ffb_reader.h  main.cpp  pxn_wheel.cpp  pxn_wheel.h
vjoy/: vjoyinterface.h
